<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back3"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_marginBottom="10dp"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="330dp"
        android:layout_gravity="center"
        app:cardCornerRadius="10dp"
        android:background="#fff"
        android:layout_marginTop="210dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:padding="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:text="@string/pdf_viewer" />
    <EditText
        android:layout_width="match_parent"
        android:hint="@string/enter_otp"
        android:layout_marginTop="20dp"
        android:inputType="number"
        android:id="@+id/code"
        android:layout_height="wrap_content"
        android:autofillHints="" />
    <Button
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:id="@+id/btn"
        android:backgroundTint="#D3D3D3"
        android:textColor="@android:color/black"
        android:text="@string/sign_in_new"
        android:layout_height="wrap_content" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/didn_t_recieve_the_code"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"/>


                <TextView
                    android:id="@+id/resend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>