<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cars_card"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"

        app:cardElevation="6dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"

            android:padding="20dp">

            <TextView
                android:id="@+id/cars_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cars_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:fontFamily="serif"
                android:text="@string/cars"
                android:textColor="#ee8572"
                android:textSize="24sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif-medium" />

            <ImageView
                android:id="@+id/cars_image"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                app:srcCompat="@drawable/pdfimage2"
                android:contentDescription="@string/todo" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/sign_out"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_out"
        android:padding="5dp"
        android:textColor="@android:color/white"
        android:background="#fff"
        android:layout_marginStart="40dp"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>