<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/back3"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Welcome Back,\nplease login\nto your account"-->
<!--            android:layout_gravity="center"-->
<!--            android:textColor="@android:color/black"-->
<!--            android:textSize="28sp"-->
<!--            android:textStyle="bold"/>-->

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="330dp"
            android:layout_gravity="center"
            app:cardCornerRadius="10dp"
            android:background="#fff"
            android:layout_marginTop="210dp"
            >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerInParent="true"
                    android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="36sp"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"
                            android:text="@string/sign_in" />



                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_phone_number"
                            android:layout_marginTop="50dp"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            app:endIconMode="clear_text"

                            >

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/enter_PhoneNumber"
                                    android:inputType="phone"
                                    android:layout_width="match_parent"
                                    android:layout_marginTop="20dp"
                                    android:layout_height="match_parent"/>
                        </com.google.android.material.textfield.TextInputLayout>


                        <Button
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:padding="10dp"
                            android:layout_marginTop="30dp"
                            android:id="@+id/btn_next"
                            android:backgroundTint="#D3D3D3"
                            android:textColor="@android:color/black"
                            android:text="@string/get_the_otp"
                            />







                </LinearLayout>

        </androidx.cardview.widget.CardView>


</LinearLayout>